--- a/.github/workflows/template-copy.yml
+++ b/.github/workflows/template-copy.yml
@@ -19,6 +19,9 @@ on:
         description: "Enter template files manually (comma-separated, e.g., ref1.txt,ref5.txt) if not using a predefined option"
         required: false
 
+permissions: 
+  contents: write  # ✅ Grants permission to push changes
+
 jobs:
   create-folder:
     runs-on: ubuntu-latest
@@ -61,9 +64,11 @@ jobs:
           done
 
       - name: Commit and Push Changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions@github.com"
           git add .
-          git commit -m "Created folder ${{ github.event.inputs.app_name }} with selected templates"
-          git push
+          git commit -m "Created folder ${{ github.event.inputs.app_name }} with selected templates" || echo "No changes to commit"
+          git push origin HEAD:main
