--- a/.github/workflows/terraform-templates.yml
+++ b/.github/workflows/terraform-templates.yml
@@ -39,8 +39,8 @@ jobs:
           TARGET_DIR="$APP_NAME/$ENV"
           mkdir -p "$TARGET_DIR"
 
-          ARCH_FILE="examples/architecture/refArch.json"
-          RES_FILE="examples/architecture/resources.json"
+          ARCH_FILE="example/architecture/refArch.json"
+          RES_FILE="example/architecture/resources.json"
 
           # Get all resources corresponding to the arch_type
           RESOURCES=$(jq -r --arg arch "$ARCH_TYPE" '.[$arch][]' "$ARCH_FILE")
@@ -50,7 +50,7 @@ jobs:
           for resource in $RESOURCES; do
             FILE_PATH=$(jq -r --arg res "$resource" '.[$res]' "$RES_FILE")
             if [[ "$FILE_PATH" != "null" ]]; then
-              cp "examples/architecture/$FILE_PATH" "$TARGET_DIR/"
+              cp "example/architecture/$FILE_PATH" "$TARGET_DIR/"
               COPIED_FILES+="$FILE_PATH "
             fi
           done
