--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -82,6 +82,8 @@ jobs:
 
     - name: Create and switch to new branch
       run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
         git checkout -b ${{ steps.vars.outputs.BRANCH_NAME }}
 
     - name: Commit and push changes to user branch
@@ -90,3 +92,4 @@ jobs:
         branch: ${{ steps.vars.outputs.BRANCH_NAME }}
         commit_message: "Create environment folder ${{ github.event.inputs.app_name }}/${{ github.event.inputs.env }} for ${{ github.event.inputs.architecture }}"
         push_options: '--force'
+        github_token: ${{ secrets.GITHUB_TOKEN }} # Added this line.
