--- a/.github/workflows/gemini.yml
+++ b/.github/workflows/gemini.yml
@@ -20,6 +20,9 @@ on:
           - datalanding
           - webapp
           - blank
+          
+permissions:
+  contents: write
 
 jobs:
   create_env_folder:
